fixes white space in mobile view

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -26,7 +26,14 @@ $ipad: 768px;
     box-sizing:border-box;
 }
 
+
+
 //helper classes/////////
+
+img{
+    width: 100%;
+}
+
 .flex{
     display:flex;
     justify-content: center;
@@ -52,11 +59,6 @@ header{
     display:none;
 }
 
-
- .tri-break{
-    background-image:url("/websiteassetshomepageonly/Tri-Break.png");
-    height: 131px;
-}
 
 //services/////////
 
